# apple-tools

./: .gitignore  README.md  flake.nix  pyproject.toml
graphics/: README.md  pyproject.toml
graphics/src/graphics/: __init__.py
preprocess/: .gitignore  README.md  pyproject.toml
preprocess/examples/: ball.bas  changeentry.apl  numberguess.bas  remremove.bas  starrynight.bas
preprocess/examples/multifile/: main.apl  main.bas  other.apl  other.bas  other_nested.bas
preprocess/examples/multifile/lib/: hack.apl  hack.bas  hack2.bas
preprocess/examples/simplemultifile/: main.apl  main.bas  other.apl  other.bas
preprocess/src/preprocess/: __init__.py
preprocess/tests/: ball.test  lit.cfg  multifile.test  numberguess.test  remremove.test  simplemultifile.test  starrynight.test
