[project]
name = "graphics"
version = "0.1.0"
description = "Awesome Apple ][ Graphics Tool"
readme = "README.md"
authors = [
    { name = "peterc-s", email = "petercs@purelymail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fire>=0.7.1",
]

[project.scripts]
graphics = "graphics:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
