[project]
name = "preprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "peterc-s", email = "petercs@purelymail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
preprocess = "preprocess:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
